@@ -18,7 +18,6 @@ package org.springframework.ai.bedrock.cohere;
 
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 import org.jspecify.annotations.Nullable;
 
@@ -43,6 +42,7 @@ import org.springframework.util.Assert;
  *
  * @author Christian Tzolov
  * @author Soby Chacko
+ * @author Sebastien Deleuze
  * @since 0.8.0
  */
 public class BedrockCohereEmbeddingModel extends AbstractEmbeddingModel {
@@ -51,7 +51,7 @@ public class BedrockCohereEmbeddingModel extends AbstractEmbeddingModel {
 
 	private final CohereEmbeddingBedrockApi embeddingApi;
 
-	private final BedrockCohereEmbeddingOptions defaultOptions;
+	private final BedrockCohereEmbeddingOptions options;
 
 	// private CohereEmbeddingRequest.InputType inputType =
 	// CohereEmbeddingRequest.InputType.SEARCH_DOCUMENT;
@@ -60,11 +60,7 @@ public class BedrockCohereEmbeddingModel extends AbstractEmbeddingModel {
 	// CohereEmbeddingRequest.Truncate.NONE;
 
 	public BedrockCohereEmbeddingModel(CohereEmbeddingBedrockApi cohereEmbeddingBedrockApi) {
-		this(cohereEmbeddingBedrockApi,
-				BedrockCohereEmbeddingOptions.builder()
-					.inputType(CohereEmbeddingRequest.InputType.SEARCH_DOCUMENT)
-					.truncate(CohereEmbeddingRequest.Truncate.NONE)
-					.build());
+		this(cohereEmbeddingBedrockApi, BedrockCohereEmbeddingOptions.builder().build());
 	}
 
 	public BedrockCohereEmbeddingModel(CohereEmbeddingBedrockApi cohereEmbeddingBedrockApi,
@@ -72,7 +68,7 @@ public class BedrockCohereEmbeddingModel extends AbstractEmbeddingModel {
 		Assert.notNull(cohereEmbeddingBedrockApi, "CohereEmbeddingBedrockApi must not be null");
 		Assert.notNull(options, "BedrockCohereEmbeddingOptions must not be null");
 		this.embeddingApi = cohereEmbeddingBedrockApi;
-		this.defaultOptions = options;
+		this.options = options;
 	}
 
 	@Override
@@ -115,7 +111,7 @@ public class BedrockCohereEmbeddingModel extends AbstractEmbeddingModel {
 				default -> text.substring(0, COHERE_MAX_CHARACTERS); // Default to END
 																		// behavior
 			};
-		}).collect(Collectors.toList());
+		}).toList();
 
 		var apiRequest = new CohereEmbeddingRequest(truncatedInstructions, inputType, truncate);
 		CohereEmbeddingResponse apiResponse = this.embeddingApi.embedding(apiRequest);
@@ -134,7 +130,7 @@ public class BedrockCohereEmbeddingModel extends AbstractEmbeddingModel {
 	 */
 	BedrockCohereEmbeddingOptions mergeOptions(@Nullable EmbeddingOptions requestOptions) {
 
-		BedrockCohereEmbeddingOptions options = this.defaultOptions;
+		BedrockCohereEmbeddingOptions options = this.options;
 		// BedrockCohereEmbeddingOptions disregards options from EmbeddingOptions, so only
 		// specific options make sense here
 		if (requestOptions instanceof BedrockCohereEmbeddingOptions ro) {
